--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -1129,7 +1129,9 @@
                         <Component class="javax.swing.JComboBox" name="cboTheLoai">
                           <Properties>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="0"/>
+                              <StringArray count="1">
+                                <StringItem index="0" value=" "/>
+                              </StringArray>
                             </Property>
                           </Properties>
                           <Events>
